--- a/grav/user/themes/annekesinnema/scss/basics/_typography.scss
+++ b/grav/user/themes/annekesinnema/scss/basics/_typography.scss
@@ -44,19 +44,6 @@ h1, h2, h3 {
     }
 }
 
-.site-header__title {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    
-    .langswitcher {
-        top: 0;
-        transform: none;
-        margin: 0;
-        text-transform: none;
-    }
-}
-
 h1 { 
     font-size: 2.1rem;
 }
