--- a/grav/user/themes/annekesinnema/scss/sections/navigation.scss
+++ b/grav/user/themes/annekesinnema/scss/sections/navigation.scss
@@ -36,7 +36,6 @@
     }
 
     #menu-open:target .mobile__navigation {
-        // margin-top: calc(50px + 4.44rem);
         z-index: 3;
 
         &::before {
@@ -129,23 +128,6 @@
     @media screen and (min-width: $tablet-portrait) {
         display: inline-block;
         margin-left: $whitespace-medium;
-
-        a {
-            padding-bottom: 1rem;
-        }
-
-        // &:hover,
-        // &:focus {
-        //     .ul-sub {
-        //         display: block;
-        //     }
-        // }
-
-        // &:focus-within {
-        //     .ul-sub {
-        //         display: block;
-        //     }
-        // }
     }
 }
 
